--- a/style/style.less
+++ b/style/style.less
@@ -477,7 +477,7 @@ section {
         margin-top: 7rem;
 
         img {
-            width: 50%;
+            width: 70%;
         }
     }
 
@@ -594,6 +594,10 @@ section {
     // HABILIDADES 
     .section-habilidades {
         height: 100%;
+    }
+
+    .habilidades {
+        padding-bottom: 1.2rem;
     }
 
     .habilidade01 {
