--- a/style/style.less
+++ b/style/style.less
@@ -477,7 +477,7 @@ section {
         margin-top: 7rem;
 
         img {
-            width: 40%;
+            width: 45%;
         }
     }
 
@@ -594,6 +594,7 @@ section {
     // HABILIDADES 
     .section-habilidades {
         height: 100%;
+        padding-top: 1.2rem;
     }
 
     .habilidades {
