--- a/style/style.less
+++ b/style/style.less
@@ -493,6 +493,10 @@ section {
 // 480
 @media (min-width: 0) and (max-width: 599px) {
 
+    .download {
+        margin-top: 5rem;
+    }
+
     .download img {
         margin: 0;
         height: 2.5rem;
