--- a/style/style.less
+++ b/style/style.less
@@ -493,11 +493,16 @@ section {
 // 480
 @media (min-width: 0) and (max-width: 599px) {
 
+    .download {
+        padding: 0;
+    }
+
     .download img {
         margin: 0;
         height: 2.5rem;
         margin-top: 5px;
         margin-left: 15px;
+        padding: 0;
     }
 
     .download a {
@@ -736,6 +741,7 @@ section {
 
     .download {
         margin-top: 3rem;
+        padding: 0;
     }
 
     .download img {
@@ -743,6 +749,7 @@ section {
         height: 2.5rem;
         margin-top: 5px;
         margin-left: 15px;
+        padding: 0;
     }
 
     .download a {
@@ -762,6 +769,7 @@ section {
     }
 }
 
+
 @media (width: 375px) {
     .profile {
         margin-top: 7rem;
@@ -769,6 +777,7 @@ section {
 
     .download {
         margin-top: 5rem;
+        padding: 0;
     }
 
     .download img {
@@ -776,6 +785,7 @@ section {
         height: 2.5rem;
         margin-top: 5px;
         margin-left: 15px;
+        padding: 0;
     }
 
     .download a {
@@ -790,6 +800,7 @@ section {
 
     .download {
         margin-top: 7rem;
+        padding: 0;
     }
 
     .download img {
@@ -797,6 +808,7 @@ section {
         height: 2.5rem;
         margin-top: 5px;
         margin-left: 15px;
+        padding: 0;
     }
 
     .download a {
@@ -811,6 +823,7 @@ section {
 
     .download {
         margin-top: 5rem;
+        padding: 0;
     }
 
     .download img {
@@ -818,6 +831,7 @@ section {
         height: 2.5rem;
         margin-top: 5px;
         margin-left: 15px;
+        padding: 0;
     }
 
     .download a {
@@ -837,6 +851,7 @@ section {
         height: 3rem;
 
         margin-top: 10rem;
+        padding: 0;
     }
 
     .download img {
@@ -845,6 +860,8 @@ section {
 
         margin-top: -10px;
         margin-left: 15px;
+
+        padding: 0;
     }
 
     .download a {
@@ -951,6 +968,8 @@ section {
         height: 3.2rem;
 
         margin-top: 10rem;
+
+        padding: 0;
     }
 
     .download img {
@@ -959,6 +978,8 @@ section {
 
         margin-top: -10px;
         margin-left: 15px;
+
+        padding: 0;
     }
 
     .download a {
