--- a/style/style.less
+++ b/style/style.less
@@ -495,7 +495,8 @@ section {
 
     .download {
         padding: 0;
-        
+        background-color:red; 
+
         margin-top: 5rem;
     }
 
@@ -748,9 +749,10 @@ section {
 
     .download img {
         margin: 0;
-        height: 2.5rem;
+        //height: 2.5rem;
         margin-top: 5px;
         margin-left: 15px;
+        
         padding: 0;
     }
 
@@ -785,7 +787,7 @@ section {
 
     .download img {
         margin: 0;
-        height: 2.5rem;
+        //height: 2.5rem;
         margin-top: 5px;
         margin-left: 15px;
         padding: 0;
@@ -808,7 +810,7 @@ section {
 
     .download img {
         margin: 0;
-        height: 2.5rem;
+        //height: 2.5rem;
         margin-top: 5px;
         margin-left: 15px;
         padding: 0;
@@ -831,7 +833,7 @@ section {
 
     .download img {
         margin: 0;
-        height: 2.5rem;
+        //height: 2.5rem;
         margin-top: 5px;
         margin-left: 15px;
         padding: 0;
