att download marting-top

--- a/style/style.less
+++ b/style/style.less
@@ -495,9 +495,8 @@ section {
 
     .download {
         padding: 0;
-        background-color:red; 
 
-        margin-top: 5rem;
+        //margin-top: 5rem;
     }
 
     .download img {
