--- a/style/style.less
+++ b/style/style.less
@@ -496,7 +496,7 @@ section {
     .download {
         padding: 0;
 
-        //margin-top: 5rem;
+        margin-top: 4rem;
     }
 
     .download img {
