att button download 3

--- a/style/style.less
+++ b/style/style.less
@@ -491,12 +491,12 @@ section {
 
 
 // 480
-@media (min-width: 0) and (max-width: 599px) {
+@media (min-width: 320px) and (max-width: 599px) {
 
     .download {
         padding: 0;
 
-        margin-top: 6rem;
+        margin-top: 5rem;
     }
 
     .download img {
