--- a/style/style.less
+++ b/style/style.less
@@ -12,6 +12,10 @@ body {
     scroll-behavior: smooth;
 }
 
+a {
+    text-decoration: none;
+}
+
 .btn {
     display: flex;
     justify-content: center;
@@ -198,18 +202,19 @@ nav {
     justify-content: center;
 
     a {
-        margin: auto;
+        margin: auto; 
 
         text-align: center;
         text-decoration: none;
         font-weight: bold;
-
+ 
         font-size: 1.2rem;
         color: var(--black);
     }
 
     img {
         width: 1.7rem;
+    
         margin: auto 0 auto .5rem;
     }
 }
