att font-size donwload

--- a/style/style.less
+++ b/style/style.less
@@ -12,10 +12,6 @@ body {
     scroll-behavior: smooth;
 }
 
-a {
-    text-decoration: none;
-}
-
 .btn {
     display: flex;
     justify-content: center;
@@ -762,6 +758,7 @@ section {
 
     .download a {
         margin-left: -10px;
+        font-size: 1rem;
     }
 
     .conteudo-header li a {
